--- a/justpost/accounts/templates/accounts/login.html
+++ b/justpost/accounts/templates/accounts/login.html
@@ -9,4 +9,5 @@
         </table>
         <button type="submit">Entrar</button>
     </form>
+    <p><a href="{% url 'accounts:password_reset' %}">Esqueceu sua senha?</a></p>
 {% endblock content %}
