--- a/justpost/posts/templates/posts/post_detail.html
+++ b/justpost/posts/templates/posts/post_detail.html
@@ -3,14 +3,16 @@
 {% block content %}
     <div>
         <h2>{{ object.titulo }}</h2>
-        <p>por {{ object.autor.username }} em {{ object.data_criacao|date:"d/m/Y" }}</p>
+        <p>{{ object.autor.username }}<br>{{ object.data_criacao|date:"d/m/Y" }}</p>
 
         <div>{{ rendered_post|safe }}</div>
     </div>
 
     {% if user == object.autor %}
         <hr>
-        <a href="{% url 'posts:post-edit' pk=object.pk %}">Editar Post</a>
-        <a href="{% url 'posts:post-delete' pk=object.pk %}">Deletar Post</a>
+        <div role="group">
+            <a href="{% url 'posts:post-edit' pk=object.pk %}" role="button" class="primary">Editar Post</a>
+            <a href="{% url 'posts:post-delete' pk=object.pk %}" role="button" class="secondary">Deletar Post</a>
+        </div>
     {% endif %}
 {% endblock content %}
