better separate post info

--- a/justpost/posts/templates/posts/post_detail.html
+++ b/justpost/posts/templates/posts/post_detail.html
@@ -3,7 +3,8 @@
 {% block content %}
     <div>
         <h2>{{ object.titulo }}</h2>
-        <p>{{ object.autor.username }}<br>{{ object.data_criacao|date:"d/m/Y" }}</p>
+        <p>Por {{ object.autor.username }}<br>{{ object.data_criacao|date:"d/m/Y" }}</p>
+        <hr>
 
         <div>{{ rendered_post|safe }}</div>
     </div>
