--- a/justpost/posts/templates/posts/post_list.html
+++ b/justpost/posts/templates/posts/post_list.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <h2>Bem-vindo ao JustPost!</h2>
+    <p>Crie seu próprio post, ou visualize posts existentes abaixo</p>
+    <a href="{% url 'posts:post-create' %}" role="button">Criar Post</a>
     <h2>Posts</h2>
     {% for post in posts %}
         <article>
