--- a/justpost/accounts/templates/accounts/signup_form.html
+++ b/justpost/accounts/templates/accounts/signup_form.html
@@ -9,4 +9,5 @@
         </table>
         <button type="submit">Criar</button>
     </form>
+    <p><a href="{% url 'accounts:login' %}">Já tenho uma conta</a></p>
 {% endblock content %}
