--- a/justpost/accounts/templates/accounts/password_reset_done.html
+++ b/justpost/accounts/templates/accounts/password_reset_done.html
@@ -12,4 +12,5 @@
     Se você não receber um e-mail, verifique se digitou o
     endereço com o qual se registrou e verifique sua pasta de spam.
     </p>
+    <a role="button" href="{% url 'posts:post-list' %}">Home</a>
 {% endblock %}
