--- a/justpost/accounts/templates/accounts/password_change_done.html
+++ b/justpost/accounts/templates/accounts/password_change_done.html
@@ -5,4 +5,5 @@
 {% block content %}
     <h2>Senha alterada com sucesso!</h2>
     <p>Sua senha foi alterada.</p>
+    <a role="button" href="{% url 'posts:post-list' %}">Home</a>
 {% endblock %}
